Adicionado novas telas e alterações da empresa

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -7,6 +7,11 @@
   font-family: var(--fa-style-family, "Font Awesome 6 Free");
   font-weight: var(--fa-style, 900); }
 
+  select
+{
+    width:200px;
+}
+
 .fa,
 .fa-classic,
 .fa-sharp,
